objects/HCConfig__mdt.object
<CustomObject>
    <fields>
        <fullName>Auth_Password__c</fullName>
        <label>Auth Password</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_User_Name__c</fullName>
        <label>Auth User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>HCConfig</label>
    <pluralLabel>HCConfigs</pluralLabel>
</CustomObject>